--- a/.github/workflows/my_first_action.yml
+++ b/.github/workflows/my_first_action.yml
@@ -17,3 +17,5 @@ jobs:
         echo test, and deploy your project.
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v1.1
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
