--- a/.github/workflows/my_first_action.yml
+++ b/.github/workflows/my_first_action.yml
@@ -9,9 +9,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run Maven
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        args: clean package org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        java-version: 1.8
+    - name: Run Maven
+      run: mvn clean package org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
