--- a/.github/workflows/my_first_action.yml
+++ b/.github/workflows/my_first_action.yml
@@ -1,14 +1,20 @@
-name: SonarCloudTrigger
+name: CI
 
 on: [push]
 
 jobs:
-  sonarCloudTrigger:
-    name: SonarCloud Trigger
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v1
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - uses: actions/checkout@v1
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Run Maven
+      run: mvn clean package org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
