--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,14 @@
     </description>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.organization>kkflf</sonar.organization>
+    <sonar.projectKey>roar</sonar.projectKey>
+    <sonar.projectName>Roar - Real Object Avro Reflection</sonar.projectName>
+</properties>
 
     <repositories>
         <repository>
